query logikfehler gefixed

--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -109,6 +109,10 @@ body{
   cursor: pointer;
 }
 
+.rating-disabled .message{
+  cursor: default;
+}
+
 .rating-hint{
   font-size: 12px;
   display: flex;
