Vorbereitung für dokumentenverwaltung. ui mit fake data implementiert

--- a/src/main/resources/templates/dokumente.html
+++ b/src/main/resources/templates/dokumente.html
@@ -3,8 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <title>Thesis Bot Dokumente</title>
+
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/dokumente.css">
 </head>
 <body>
+<h1>Dokumente für die Wissensdatenbank</h1>
+<div class="doku-liste-container">
+    <div class="tool-container">
+        <div class="tool-text-img-box">
+            <div>Hinzufügen:</div>
+            <button class="tool" id="add-document"><img src="pictures/file-plus.svg" width="25px" height="20px"></button>
+        </div>
+        <div class="tool-text-img-box">
+            <div>Zum Chat:</div>
+            <button onclick="window.location.href='/'" class="tool" id="navigate-chat"><img src="pictures/back-symbol.svg" width="25px" height="20px"></button>
+        </div>
+    </div>
+    <ul class="doku-liste">
+        <li class="doku-liste-eintrag">
+            <a href="resources/pdfs/Krankenhausreform.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+        <li class="doku-liste-eintrag">
+            <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+        </li>
+
+    </ul>
+
+</div>
 <input type="file" >
 
 </body>
