prompt in application.properties deklarierbar gemacht

--- a/src/main/resources/META-INF/resources/styles/dokumente.css
+++ b/src/main/resources/META-INF/resources/styles/dokumente.css
@@ -54,3 +54,8 @@ h1 {
     width: 60vw;
 }
 
+.doku-liste-eintrag{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
