--- a/src/main/resources/templates/dokumente.html
+++ b/src/main/resources/templates/dokumente.html
@@ -21,12 +21,13 @@
         </div>
     </div>
     <ul class="doku-liste">
-        <li class="doku-liste-eintrag">
-            <a href="resources/pdfs/Krankenhausreform.pdf" target="_blank">Expose</a>
-        </li>
+
         <li class="doku-liste-eintrag">
             <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
+            <div>01.01.2021</div>
+            <div class="delete-button">X</div>
         </li>
+
         <li class="doku-liste-eintrag">
             <a href="dokumente/Thesis_Bot_Expose.pdf" target="_blank">Expose</a>
         </li>
@@ -89,7 +90,47 @@
     </ul>
 
 </div>
-<input type="file" >
+<div class="add-docu-container">
+    <input type="text" id="docu-name" >
+    <input type="file" >
+</div>
+
 
 </body>
+<script>
+
+
+
+    window.onload = async function () {
+        await fetch('/api/files/all', {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        }).then(response => response.json())
+            .then(data => {
+                console.log(data);
+                data.forEach((file) => {
+                    let li = document.createElement('li');
+                    li.className = 'doku-liste-eintrag';
+                    li.id = file.id;
+                    let a = document.createElement('a');
+                    a.href = '/api/files/' + file.id;
+                    a.target = '_blank';
+                    a.innerText = file.name;
+                    li.appendChild(a);
+                    let div = document.createElement('div');
+                    Date.prototype.toDateInputValue = (function() {
+                        var local = new Date(this);
+                        local.setMinutes(this.getMinutes() - this.getTimezoneOffset());
+                        return local.toJSON().slice(0,10);
+                    });
+                    file.created = new Date(file.created).toDateInputValue();
+                    div.innerText = file.created;
+                    li.appendChild(div);
+                    document.querySelector('.doku-liste').appendChild(li);
+                });
+            });
+    }
+</script>
 </html>
