--- a/src/main/resources/META-INF/resources/styles/dokumente.css
+++ b/src/main/resources/META-INF/resources/styles/dokumente.css
@@ -59,3 +59,71 @@ h1 {
     justify-content: space-between;
     align-items: center;
 }
+
+.add-docu-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60vw;
+    z-index: 20;
+    position: absolute;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px 0 #ccc;
+    display: none;
+    padding-top: 40px;
+
+}
+
+#docu-name {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.name-input-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#drop-zone {
+    width: 100%;
+    height: 100px;
+    border: 2px dashed #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.add-docu-container button {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.add-docu-container button:hover {
+    background-color: #45a049;
+}
+
+#close-add-docu-container {
+    font-size: 20px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    background-color: white;
+    border-radius: 50%;
+    color: black;
+    border: solid 1px #ccc;
+    padding: 5px 10px;
+}
+
