RetrieveAugmentor weiterentwickelt und mit techniken wie query compression und metadata der dokumente ausgestattet

--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -255,6 +255,12 @@ body{
     max-width: 99vw;
   }
 
+  body{
+    overflow: auto;
+    margin-bottom: 50px;
+    height: calc(100vh - 50px);
+  }
+
 }
 
 @media (max-width: 400px){
