--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -268,3 +268,64 @@ body{
     display: none;
   }
 }
+
+
+/* load symbol when message is processed */
+:root {
+  --load-color: rgba(48, 140, 190, 0.62);
+}
+
+.dot-bricks {
+  position: relative;
+  top: 8px;
+  left: -9999px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--load-color);
+  color: var(--load-color);
+  box-shadow: 9991px -16px 0 0 var(--load-color), 9991px 0 0 0 var(--load-color), 10007px 0 0 0 var(--load-color);
+  animation: dot-bricks 2s infinite ease;
+}
+
+@keyframes dot-bricks {
+  0% {
+    box-shadow: 9991px -16px 0 0 var(--load-color), 9991px 0 0 0 var(--load-color), 10007px 0 0 0 var(--load-color);
+  }
+  8.333% {
+    box-shadow: 10007px -16px 0 0 var(--load-color), 9991px 0 0 0 var(--load-color), 10007px 0 0 0 var(--load-color);
+  }
+  16.667% {
+    box-shadow: 10007px -16px 0 0 var(--load-color), 9991px -16px 0 0 var(--load-color), 10007px 0 0 0 var(--load-color);
+  }
+  25% {
+    box-shadow: 10007px -16px 0 0 var(--load-color), 9991px -16px 0 0 var(--load-color), 9991px 0 0 0 var(--load-color);
+  }
+  33.333% {
+    box-shadow: 10007px 0 0 0 var(--load-color), 9991px -16px 0 0 var(--load-color), 9991px 0 0 0 var(--load-color);
+  }
+  41.667% {
+    box-shadow: 10007px 0 0 0 var(--load-color), 10007px -16px 0 0 var(--load-color), 9991px 0 0 0 var(--load-color);
+  }
+  50% {
+    box-shadow: 10007px 0 0 0 var(--load-color), 10007px -16px 0 0 var(--load-color), 9991px -16px 0 0 var(--load-color);
+  }
+  58.333% {
+    box-shadow: 9991px 0 0 0 var(--load-color), 10007px -16px 0 0 var(--load-color), 9991px -16px 0 0 var(--load-color);
+  }
+  66.666% {
+    box-shadow: 9991px 0 0 0 var(--load-color), 10007px 0 0 0 var(--load-color), 9991px -16px 0 0 var(--load-color);
+  }
+  75% {
+    box-shadow: 9991px 0 0 0 var(--load-color), 10007px 0 0 0 var(--load-color), 10007px -16px 0 0 var(--load-color);
+  }
+  83.333% {
+    box-shadow: 9991px -16px 0 0 var(--load-color), 10007px 0 0 0 var(--load-color), 10007px -16px 0 0 var(--load-color);
+  }
+  91.667% {
+    box-shadow: 9991px -16px 0 0 var(--load-color), 9991px 0 0 0 var(--load-color), 10007px -16px 0 0 var(--load-color);
+  }
+  100% {
+    box-shadow: 9991px -16px 0 0 var(--load-color), 9991px 0 0 0 var(--load-color), 10007px 0 0 0 var(--load-color);
+  }
+}
