--- a/src/main/resources/templates/dokumente.html
+++ b/src/main/resources/templates/dokumente.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thesis Bot Dokumente</title>
+    <link rel="icon" type="image/x-icon" href="/pictures/Chatbot_Logo.webp">
 
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/dokumente.css">
