--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -1,9 +1,14 @@
+:root{
+  --highlight-color: rgba(48, 140, 190, 0.62);
+  --load-color: rgb(0, 123, 255);
+  --light-bg: #f2f2f2;
+}
 
 body{
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background-color: var(--light-bg);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,7 +34,7 @@ body{
   height: 100%;
   width: 100%;
     max-width: 60vw;
-  background-color: #f2f2f2;
+  background-color: var(--light-bg);
   border: 1px solid #e6e6e6;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -90,7 +95,7 @@ body{
   padding: 7px;
   border: none;
   border-radius: 90px;
-  background-color: rgba(48, 140, 190, 0.62);
+  background-color: var(--highlight-color);
   color: #fff;
   cursor: pointer;
   outline: none;
@@ -285,9 +290,6 @@ code {
 
 
 /* load symbol when message is processed */
-:root {
-  --load-color: rgba(48, 140, 190, 0.62);
-}
 
 .dot-bricks {
   position: relative;
