Struktur geändert um verschiedene Modi einzubauen + multipleChoice.html angelegt

--- a/src/main/resources/templates/dokumente.html
+++ b/src/main/resources/templates/dokumente.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/dokumente.css">
 
-    <script src="js/DocumentService.js" ></script>
+    <script src="../META-INF/resources/js/chat/DocumentService.js" ></script>
 </head>
 <body>
 <h1>Dokumente für die Wissensdatenbank</h1>
