Klassen für Vorlesung und Skripte erzeugt

--- a/src/main/resources/templates/multipleChoice.html
+++ b/src/main/resources/templates/multipleChoice.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>multiple Choice Test</title>
+    <link rel="icon" type="image/x-icon" href="/pictures/Chatbot_Logo.webp">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/darkmode.css">
 
